# web_amm

./: README.md
backend/: .gitignore  Cargo.toml
backend/src/: main.rs  state.rs  websocket.rs
backend/src/db/: database.rs  models.rs  queries.rs
backend/src/routes/: auth.rs  dashboard.rs  home.rs  mod.rs  pool.rs  token.rs
backend/src/web3/: contract.rs  deploy.rs  mintTokenX.rs  mod.rs
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/public/output/: metadata.csv  token.json  token_minter.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AuthForm.jsx  Exchange.jsx  Header.jsx  PoolManager.jsx  PoolsContext.jsx  TokenMetadata.jsx  TokenMint.jsx  Tokens.jsx  TokensContext.jsx  WalletConnect.jsx  WebSocketContext.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/utils/: api.js
