[package]
name = "amm_website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"    
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
tower = { version = "0.5.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
anchor-client = "0.30.1"
solana-sdk = "1.17.3"
solana-client = "1.17.3"
solana-program = "1.17.3"
solana-account-decoder = "1.17.3"
serde_json = "1.0"
#zeroize = "1.3"

dirs = "6.0"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0.96"
