[package]
name = "amm_website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7", features = ["macros", "ws"]}    
mongodb = "3.2.1"
tower = { version = "0.5.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
anchor-client = "0.30.1"
solana-sdk = "1.17.3"
solana-client = "1.17.3"
solana-program = "1.17.3"
solana-account-decoder = "1.17.3"
serde_json = "1.0"
dirs = "6.0"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0.96"
jsonwebtoken = "9.2"
bcrypt = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version="0.9", features=["typed-header"]}
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "anchor-debug"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
base64="0.22.1"
bincode = "1.3.3"
dotenvy = "0.15"
futures-util = "0.3"
actix-web = "4.1.0"
tokio-tungstenite = "0.26.2"
